--- a/game-frontend/tsconfig.json
+++ b/game-frontend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./src/site/js",
-    "module": "commonjs",
+    "module": "none",
     "target": "es5",
     "sourceMap": true
   },
